--- a/README.html
+++ b/README.html
@@ -37,7 +37,7 @@ like Lagun which do not change their HTTP replies on / but are quite slow to
 start up.
 </ul>
 
-To run this server on your premises (Linux only), you may download the prebuilt x86_64 rootfs file at <a href=https://janona.perso.math.cnrs.fr/shiny-rootfs.tar.xz>shiny-rootfs.tar.xz</a>, then use
+To run this server on your premises (Linux only), you may download the prebuilt x86_64 rootfs file at <a href=https://janona.perso.math.cnrs.fr/shiny-rootfs.tar.xz>shiny-rootfs.tar.xz</a>, then use<p>
 
 <pre>
    $ tar xf shiny-rootfs.tar.xz
@@ -49,7 +49,7 @@ or use the included Dockerfile.<p>
 
 You can customize the apps in the "/apps" directory of the rootfs. A template "testapp" is included, remove the "off" file to get it run.
 
-The rootfs can also be built with
+The rootfs can also be built with<p>
 
 <pre>
    # create the <a href=https://alpinelinux.org>Alpine Linux</a> build chroot
