--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 This server runs multiple apps:<p>
 
-<a href=https://gitlab.com/drti/lagun>Lagun</a> with the following changes (see loadPackages.R, app.R and evaluateDOE.R):
+<a href=https://gitlab.com/drti/lagun>Lagun</a> with the following changes (see files in lagun-mod/):
   <ul>
   <li> don't use renv; all dependencies are at their latest version on CRAN
   <li> send keepalive messages on the websocket every 140 s
@@ -19,7 +19,7 @@ directory lives no more than 25 hours (change this in entry_multi if you want).
   <li> No network access is permitted in this app (so no install.packages 
 from CRAN other than the preinstalled packages).
   <li> Each terminal session runs in a separate container. Files are separated between sessions; if you don't want this, there is a "shared_files_terminal" applications in apps/ that you can run by removing the "off" file in its directory.
-  <li> The launcher for this app is in apps/terminal/launch0.
+  <li> The launcher for this app is in apps/terminal/launch0, it calls utility programs in src/dropcap-inner.c and src/dropcap-outer.c for setting up the namespaces, filesystem layout and capabilities.
   <li> R integrated help is stripped to save space; you are supposed to have an online browser anyway.
   </ul>
 Each app is run in a separate container; it consists of an R process (or 
