--- a/README.html
+++ b/README.html
@@ -18,7 +18,7 @@ export your plots and computation results. Only /tmp is writable, and this
 directory lives no more than 25 hours (change this in entry_multi if you want).
   <li> No network access is permitted in this app (so no install.packages 
 from CRAN other than the preinstalled packages).
-  <li> Each terminal session runs in a separate container. Files are separated between sessions; if you don't want this, there is a "shared_files_terminal" applications in apps/ that you can run by removing the "off" file in its directory.
+  <li> Each terminal session runs in a separate container. Files are separated between sessions. If you don't want this, there is a "shared_files_terminal" applications in apps/ that you can run by removing the "off" file in its directory. In this shared mode, even the pseudo tty files are readable and writable.
   <li> The launcher for this app is in apps/terminal/launch0, it calls utility programs in src/dropcap-inner.c and src/dropcap-outer.c for setting up the namespaces, filesystem layout and capabilities.
   <li> R integrated help is stripped to save space; you are supposed to have an online browser anyway.
   </ul>
