--- a/README.html
+++ b/README.html
@@ -39,7 +39,8 @@ be disabled by leaving a file named "no_home_cache" in the app directory.
 To run this server on your premises (Linux only), you may download the prebuilt x86_64 rootfs file at <a href=https://janona.perso.math.cnrs.fr/shiny-rootfs.tar.xz>shiny-rootfs.tar.xz</a>, then use<p>
 
 <pre>
-$ tar xf shiny-rootfs.tar.xz
+$ mkdir rootfs
+$ tar xf shiny-rootfs.tar.xz -C rootfs
 $ doas cp -a /dev/*random /dev/ptmx rootfs/dev/
 $ ./99_enter_pivotroot /entry 
 </pre>
@@ -48,7 +49,7 @@ Alternatively, there is an <a href=https://specs.opencontainers.org/runtime-spec
 
 You can customize the apps in the "/apps" directory of the rootfs. A template Shiny app "testapp" is included, remove the "off" file to get it run.
 
-The rootfs can also be built with<p>
+The rootfs can also be built (x86_64 only) with<p>
 
 <pre>
 # create the <a href=https://alpinelinux.org>Alpine Linux</a> build chroot
