--- a/README.html
+++ b/README.html
@@ -70,6 +70,8 @@ user.<p>
 Dependencies for the build: Linux kernel with namespaces (mount, user, PID), usual utilities 
 (including unshare(1)), git, rsync, opendoas (or sudo symlinked to doas).<p>
 
+R configure flags are defined in x02_buildR, you may want to review and change them if you want to use a specific BLAS or enable OpenMP for multithreading.<p>
+
 <a href=https://github.com/alex14fr/lagun-shiny-deploy>Main source repository</a><p>
 Author : <a href="mailto:alexandre[.]janon[at]u-psud[.]fr">Alexandre Janon</a>
 
